--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-Flask==3.0.2
-Flask_Cors==4.0.0
-psycopg2_binary==2.9.9
 streamlit==1.33.0
+pandas==1.4.3
 plotly==5.10.0
-gunicorn==21.2.0
+altair==5.3.0
